# manifold_cdkf

./: CMakeLists.txt  README.md  package.xml
.circleci/: config.yml
cmake/: Config.cmake.in  GenerateAndInstallConfig.cmake  manifold_cdkf-extras.cmake
include/manifold_cdkf/: manifold_cdkf.hpp  measurement_funcs.hpp  process_models.hpp
include/manifold_cdkf/element_types/: array.hpp  base.hpp  compound.hpp  pose.hpp  pose_vel.hpp  quaternion.hpp  scalar.hpp  so2.hpp  unit_vector_3d.hpp  vector.hpp
src/: pose_vel_example.cpp
tests/: test_so2.cpp  test_unit_vector_3d.cpp
