<?xml version="1.0"?>
<package format="2">
  <name>manifold_cdkf</name>
  <version>0.0.0</version>
  <description>The manifold_cdkf package</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <license>Apache-2.0</license>

  <author email="kartikmohta@gmail.com">Kartik Mohta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>eigen3</build_depend>
  <build_depend>rostime</build_depend>

  <build_export_depend>eigen3</build_export_depend>
  <build_export_depend>rostime</build_export_depend>

  <export>
  </export>
</package>
